Fix newsletter settings and remove mailchimp

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -77,6 +77,5 @@ social:
 newsletter: enable
 newsletter-title: Get Updates
 newsletter-subtitle: AI literacy and librarianship in the digital age.
-newsletter-url: https://mementomodeli.substack.com
+newsletter-url: "https://mementomodeli.substack.com"
 newsletter-button-text: Subscribe
-
