--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -30,8 +30,8 @@ author:
 # Hero Settings
 hero:
   title: Memento Modeli
-  description: Marginalia of a Librarian: Enchantment, Contextualized
-  subtitle: AI Literacy and Librarianship in the Digital Age
+  description: "Marginalia of a Librarian: Enchantment, Contextualized"
+  subtitle: "AI Literacy and Librarianship in the Digital Age"
   image: '/images/521.jpg'
 
 
