--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -32,7 +32,7 @@ hero:
   title: Memento Modeli
   description: "Marginalia of a Librarian: Enchantment, Contextualized"
   subtitle: "AI Literacy and Librarianship in the Digital Age"
-  image: '/images/banner.png'
+  image: '/images/banner.PNG'
 
 
 #-------------------------------
